--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "api/darkgpt.js",
   "dependencies": {
+    "@google/generative-ai": "^0.2.1"
     "express": "^4.18.2",
     "axios": "^1.6.0"
   },
